--- a/templates/register.html
+++ b/templates/register.html
@@ -10,6 +10,10 @@
       <input type="text" name="username" />
     </div>
     <div>
+      <label>Email:</label>
+      <input type="text" name="email" />
+    </div>
+    <div>
       <label>Password:</label>
       <input type="text" name="password" />
     </div>
